--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* 1. Use a more-intuitive box-sizing model */
 *, *::before, *::after {
   box-sizing: border-box;
@@ -48,10 +50,13 @@ h1, h2, h3, h4, h5, h6 {
 
 :root {
   --BACKGROUND_HOME: #f2f2f2;
+  --FONT_WEIGHT_DEFAULT: 400;
 }
 
 html, body {
   width: 100%;
   height: 100%;
   background-color: var(--BACKGROUND_HOME);
+  font-family: "Poppins", 'Montserrat', 'Avenir', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: var(--FONT_WEIGHT_DEFAULT);
 }
