--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -7,7 +7,8 @@
   right: 0;
   scale: 1.1;
   object-fit: cover;
-  opacity: 0.1;
+  opacity: 0.2;
+  z-index: -1;
 }
 
 .border-text {
@@ -33,3 +34,42 @@
   right: 6px;
 }
 
+#home-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.get-headphones-reminder {
+  font-weight: 600;
+  font-style: italic;
+  position: fixed;
+  bottom: 2%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.8;
+  text-align: center;
+}
+
+#headphone-icon {
+  width: 25px;
+  height: 25x;
+  position: absolute;
+  top: 47%;
+  left: -8%;
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 820px) {
+  .get-headphones-reminder {
+    font-size: 8px;
+  }
+
+  #headphone-icon {
+    width: 15px;
+    height: 15x;
+  }
+}
