--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -50,8 +50,8 @@
   bottom: 2%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0.8;
   text-align: center;
+  animation: breathe-slow 5s ease-in-out 0s infinite;
 }
 
 #headphone-icon {
@@ -71,5 +71,15 @@
   #headphone-icon {
     width: 15px;
     height: 15x;
+  }
+}
+
+@keyframes breathe-slow {
+  0%, 100% {
+    opacity: 0.8;
+  }
+
+  50% {
+    opacity: 0.4;
   }
 }
