--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -20,10 +20,35 @@
   content: "";
   background: url("../assets/retro_static.gif") no-repeat center;
   position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   opacity: 1;
-  transform: scale(-1, -1);
+  transform: scaleX(-1) scaleY(-1) scale(1.2);
+}
+
+.transition-ripple {
+  background-color: transparent;
+  border: 2px solid var(--TEXT_PRIMARY);
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  position: fixed;
+}
+
+#ripple-main-wrapper {
+  width: 10vw;
+  height: 10vw;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+
+#ripple-main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: -50%;
+  left: -50%;
 }
