disable scrolling when animation is playing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,6 +65,7 @@ html, body {
   font-family: "Poppins", 'Montserrat', 'Avenir', 'Helvetica Neue', Arial, sans-serif;
   font-weight: var(--FONT_WEIGHT_DEFAULT);
   letter-spacing: var(--TEXT_SPACING);
+  overflow: visible;
 }
 
 #root {
