--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -38,7 +38,7 @@
 }
 
 .ripple {
-  /* opacity: 0; */
+  opacity: 0;
   background-color: transparent;
   border: 2px solid var(--TEXT_PRIMARY);
   border-radius: 50%;
