--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -52,3 +52,54 @@
   left: 50%;
 }
 
+#transition-text-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  letter-spacing: 0px;
+}
+
+#transition-text-wrapper > * {
+  margin: 2% 0;
+}
+
+#transition-title {
+  text-wrap: nowrap;
+  font-size: 4rem;
+  font-weight: 900;
+  color: transparent;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+#transition-subtitle {
+  text-wrap: nowrap;
+  font-weight: 300;
+}
+
+@media (max-width: 767px) {
+  #transition-title,
+  #transition-subtitle {
+    text-wrap: wrap;
+  }
+}
+
+@media (max-width: 639px) {
+  #transition-title,
+  #transition-subtitle {
+    text-wrap: wrap;
+  }
+
+  #transition-title {
+    font-size: 2.6rem;
+  }
+
+  #transition-subtitle {
+    font-size: 0.8rem;
+  }
+}
