--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -1,23 +1,48 @@
+:root {
+  --load_progress_size: max(7rem, 16vw); /* size of the progress container */
+  --load_progress_bar_thickness: 3px;
+  --load_progress_bar_size: calc(var(--load_progress_size) + var(--load_progress_bar_thickness)); /* size of the progress bar */
+  --load_progress_margin: max(1.5rem, 3vw);
+  --load_percentage_size: max(2rem, 4.5vw);
+  --progress: 0%;
+}
+
 #load-percentage-container {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
-  width: max(7rem, 16vw);
-  height: max(7rem, 16vw);
+  width: var(--load_progress_size);
+  height: var(--load_progress_size);
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid var(--LIGHT_GRAY);
   border-radius: 50%;
-  margin: max(1.5rem, 3vw);
+  margin: var(--load_progress_margin);
+  background-color: var(--BACKGROUND_HOME);
+  z-index: 1;
+}
+
+#load-progress {
+  position: fixed;
+  width: var(--load_progress_bar_size);
+  height: var(--load_progress_bar_size);
+  bottom: calc((var(--load_progress_bar_thickness) / 2) * -1);
+  left: calc((var(--load_progress_bar_thickness) / 2) * -1);
+  margin: var(--load_progress_margin);
+  background-color: transparent;
+  background-image: conic-gradient(var(--DARK_GRAY), var(--DARK_GRAY), var(--progress), transparent var(--progress));
+  z-index: 0;
+  border-radius: 50%;
 }
 
 #load-percentage {
   text-align: center;
   font-weight: 200;
-  font-size: max(2rem, 4.5vw);
+  font-size: var(--load_percentage_size);
   letter-spacing: normal;
   font-style: italic;
+  z-index: 1;
 }
 
 #loading-text-container {
@@ -42,7 +67,7 @@
 
 #loader {
   border: 3px solid var(--LIGHT_GRAY);
-  border-top: 3px solid var(--TEXT_PRIMARY);
+  border-top: 3px solid var(--DARK_GRAY);
   border-radius: 50%;
   width: 1.7rem;
   height: 1.7rem;
