add initial load page animation

--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -7,6 +7,11 @@
   --progress: 0%;
 }
 
+#loading-container {
+  display: inline;
+  opacity: 0;
+}
+
 #load-percentage-container {
   position: absolute;
   bottom: 0;
