--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -56,6 +56,7 @@ h1, h2, h3, h4, h5, h6 {
   --TEXT_PRIMARY: #5b5b5a;
   --DARK_GRAY: #5b5b5a;
   --LIGHT_GRAY: #e0e0e0;
+  --USER_INTERACTABLE_COLOR: #070504;
   --FONT_WEIGHT_DEFAULT: 400;
   --TEXT_SPACING: 0.17rem;
 }
@@ -88,4 +89,18 @@ html, body {
 .dummy-container {
   width: 100%;
   height: 100%;
+}
+
+.user-interactable {
+  --user_interactable_size: max(7rem, 10vw);
+  border: none;
+  border-radius: 50%;
+  background-color: var(--USER_INTERACTABLE_COLOR);
+  color: var(--BACKGROUND_HOME);
+  width: var(--user_interactable_size);
+  height: var(--user_interactable_size);
+  font-weight: 200;
+  font-size: 100%;
+  font-style: italic;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
