--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -1,3 +1,12 @@
+#entry-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #transition-container {
   width: 100vw;
   height: 100vh;
