--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -36,6 +36,17 @@
   left: 0;
   opacity: 1;
   transform: scaleX(-1) scaleY(-1);
+  animation: fade-in-fast 2s ease-in-out normal forwards;
+  animation-iteration-count: 1;
+}
+
+@keyframes fade-in-fast {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .fixed-scalable {
