--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -6,9 +6,9 @@
   justify-content: center;
   align-items: center;
   background-color: var(--BACKGROUND_HOME);
-  /* z-index: 100;
+  z-index: 100;
   position: absolute;
-  top: 0; */
+  top: 0;
 }
 
 #transition-container {
