--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -114,7 +114,7 @@
   margin-left: 10px;
   font-style: italic;
   background-color: var(--BACKGROUND_HOME);
-  color: black;
+  color: var(--INTERACTABLE_COLOR);
 }
 
 .section-title {
