--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid var(--LIGHT_GRAY);
+  border: 1px solid var(--GRAY_ACCENT_2);
   border-radius: 50%;
   margin: var(--load_progress_margin);
   background-color: var(--BACKGROUND_HOME);
@@ -36,7 +36,7 @@
   left: calc((var(--load_progress_bar_thickness) / 2) * -1);
   margin: var(--load_progress_margin);
   background-color: transparent;
-  background-image: conic-gradient(var(--DARK_GRAY), var(--DARK_GRAY), var(--progress), transparent var(--progress));
+  background-image: conic-gradient(var(--GRAY_ACCENT_1), var(--GRAY_ACCENT_1), var(--progress), transparent var(--progress));
   z-index: 0;
   border-radius: 50%;
 }
@@ -71,8 +71,8 @@
 }
 
 #loader {
-  border: 3px solid var(--LIGHT_GRAY);
-  border-top: 3px solid var(--DARK_GRAY);
+  border: 3px solid var(--GRAY_ACCENT_2);
+  border-top: 3px solid var(--GRAY_ACCENT_1);
   border-radius: 50%;
   width: 1.7rem;
   height: 1.7rem;
