--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,10 +61,12 @@ h1, h2, h3, h4, h5, h6 {
   --GRAY_ACCENT_1: #5b5b5a;
   --GRAY_ACCENT_2: #e0e0e0;
   --INTERACTABLE_COLOR: #070504;
-  --SHADOW_COLOR: rgba(0, 0, 0, 0.35);
+  --SHADOW_COLOR: rgba(0, 0, 0, 0.2);
   --FONT_WEIGHT_DEFAULT: 400;
   --TEXT_SPACING: 0.17rem;
   --ICON_SIZE: 30px;
+  background-color: var(--BACKGROUND_HOME);
+  color: var(--TEXT_PRIMARY);
 }
 
 .dark,
@@ -75,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
   --GRAY_ACCENT_1: #e0e0e0;
   --GRAY_ACCENT_2: #5b5b5a;
   --INTERACTABLE_COLOR: #dfdede;
-  --SHADOW_COLOR: rgba(255, 255, 255, 0.35);
+  --SHADOW_COLOR: rgba(255, 255, 255, 0.2);
   background-color: var(--BACKGROUND_HOME);
   color: var(--TEXT_PRIMARY);
 }
@@ -123,7 +125,14 @@ html, body {
   font-weight: 200;
   font-size: 100%;
   font-style: italic;
+}
+
+.shadow-wide {
   box-shadow: var(--SHADOW_COLOR) 0px 5px 15px;
+}
+
+.shadow-narrow {
+  box-shadow: var(--SHADOW_COLOR) 1.95px 1.95px 2.6px;
 }
 
 .icon {
