--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -99,12 +99,12 @@
   font-size: 150%;
   rotate: 180deg;
   cursor: pointer;
-  transition-duration: 0.2s;
+  transition-duration: var(--ANIMATION_FAST);
 }
 
 .drop-down-btn:hover {
   transform: scale(1.05);
-  transition-duration: 0.2s;
+  transition-duration: var(--ANIMATION_FAST);
 }
 
 .drop-down-btn img {
