--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @import "./loading.css";
 @import "./home.css";
 @import "./navbar.css";
+@import "./drum_sequencer.css";
 
 /* 1. Use a more-intuitive box-sizing model */
 *, *::before, *::after {
@@ -56,8 +57,8 @@ h1, h2, h3, h4, h5, h6 {
 .light {
   --BACKGROUND_HOME: #f2f2f2;
   --TEXT_PRIMARY: #5b5b5a;
-  --GRAY_ACCENT_1: #5b5b5a;
-  --GRAY_ACCENT_2: #e0e0e0;
+  --GRAY_ACCENT_1: #999999;
+  --GRAY_ACCENT_2: #d3d3d3;
   --INTERACTABLE_COLOR: #070504;
   --SHADOW_COLOR: rgba(0, 0, 0, 0.2);
   --FONT_WEIGHT_DEFAULT: 400;
