fix knob rotation and added more styles

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .dark {
   --BACKGROUND_HOME: #181818;
-  --TEXT_PRIMARY: #d0d0d0;
+  --TEXT_PRIMARY: #f2f2f2;
   --GRAY_ACCENT_1: #999999;
   --GRAY_ACCENT_2: #5b5b5a;
   --INTERACTABLE_COLOR: #dfdede;
