--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,7 +1,7 @@
 .nav-bar {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
   display: flex;
   flex-direction: row;
