--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -13,7 +13,7 @@
 }
 
 #load-percentage-container {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: var(--load_progress_size);
