--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -39,7 +39,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 2rem;
 }
@@ -138,8 +138,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: min(28rem, 50vw);
-  min-width: 200px;
+  width: min(35rem, 50vw);
+  min-width: 250px;
   min-height: 3rem;
   background-position: center;
   background-size: cover;
@@ -173,4 +173,24 @@
 .section-title {
   font-size: 1.5rem;
   color: var(--BACKGROUND_HOME);
+}
+
+@media (max-width: 828px) {
+  .section-title {
+    font-size: 1rem;
+  }
+
+  #border-text-left {
+    display: none;
+  }
+
+  #border-text-right {
+    display: none;
+  }
+}
+
+@media (max-width: 555px) {
+  .section-title {
+    font-size: 0.8rem;
+  }
 }
